Gradle Files no longer conflict on build
This also allows the application to not complain about depreciated dependencies

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -13,3 +13,10 @@
 
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+android {
+    buildToolsVersion '28.0.2'
+}
+dependencies {
+    implementation project(':openCVLibrary3')
+    implementation project(':dogecv')
+}
