--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.0'
     }
 }
-
-
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
