--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,9 +14,10 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 android {
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
+    compileSdkVersion 28
 }
 dependencies {
     implementation project(':openCVLibrary3')
-    implementation project(':dogecv')
+    implementation project(':DogeCV')
 }
